# run

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  build.rs  cliff.toml  run.lock.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  docker.yml  edge.yml  release.yml
bench/: README.md  bench.sh
benches/: run_v2.rs
benchmarks/charts/: README.md
examples/bash/: hello.sh  progress.sh
examples/c/: hello.c  progress.c
examples/cpp/: hello.cpp  progress.cpp
examples/crystal/hello/: main.cr
examples/crystal/progress/: main.cr
examples/csharp/hello/: Program.cs
examples/csharp/progress/: Program.cs
examples/dart/: hello.dart  progress.dart
examples/elixir/hello/: main.exs
examples/groovy/: hello.groovy  progress.groovy
examples/hello-world/: Cargo.toml  README.md  hello.wit  run.toml
examples/javascript/: hello.js  progress.js
examples/julia/: hello.jl  progress.jl  session_play.jl
examples/kotlin/: hello.kt  progress.kt
examples/lua/: hello.lua  progress.lua
examples/perl/: hello.pl  progress.pl  session_play.pl
examples/php/: hello.php  progress.php
examples/python/: counter.py  fly.py  interactive.py  lots.py  manager.py  std.py  uncode.py
examples/r/: hello.R  progress.R
examples/ruby/: hello.rb  progress.rb
examples/rust/: hello.rs  progress.rs
examples/swift/: hello.swift  progress.swift  session_play.swift
examples/typescript/: hello.ts  progress.ts
examples/v2/: README.md
packaging/homebrew/: run.rb.tpl
packaging/scoop/: run.json.tpl
registry-server/: Cargo.toml  README.md
registry-server/src/: main.rs
scripts/: install.sh
src/: app.rs  cli.rs  config.rs  detect.rs  highlight.rs  language.rs  lib.rs  main.rs  output.rs  repl.rs  version.rs
src/engine/: bash.rs  c.rs  cpp.rs  crystal.rs  csharp.rs  dart.rs  elixir.rs  go.rs  groovy.rs  haskell.rs  java.rs  javascript.rs  julia.rs  kotlin.rs  lua.rs  mod.rs  nim.rs  perl.rs  php.rs  placeholder.rs  python.rs  r.rs  ruby.rs  rust.rs  swift.rs  typescript.rs  zig.rs
src/v2/: cli.rs  error.rs  mod.rs
tests/: cache_and_bench.rs  cli.rs  csharp_repl.rs  csharp_semantics_suite.rs  groovy_semantics_suite.rs  repl_expression_printing.rs  repl_meta_commands.rs  v2_reproducibility.rs  v2_runtime_enforcement.rs
(+87 files in other folders)
