[package]
name = "run-kit"
version = "0.3.1"
edition = "2024"
description = "Universal multi-language runner and smart REPL"
license = "Apache-2.0"
repository = "https://github.com/Esubaalew/run"
readme = "README.md"
authors = ["Esubalew Chekol <esubalewchekol6@gmail.com>"]
homepage = "https://esubalew.et"
documentation = "https://run.esubalew.et"

[lib]
name = "run"

[[bin]]
name = "run"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "Esubalew Chekol <esubalewchekol6@gmail.com>"
depends = "libc6 (>= 2.31)"
section = "utils"
priority = "optional"
license-file = ["LICENSE", "4"]
assets = [
    [
        "target/release/run",
        "usr/bin/run",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/run/README.md",
        "644",
    ],
    [
        "LICENSE",
        "usr/share/doc/run/LICENSE",
        "644",
    ],
]
extended-description = "Universal multi-language runner and smart REPL with inline snippets, persistent sessions, and support for 20+ languages."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.19"
regex = "1.10"
rustyline = "13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "6.0"
tempfile = "3.10"
syntect = "5.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
